Fix navbar overlapping pages (#54)

--- a/src/Component/nav.module.css
+++ b/src/Component/nav.module.css
@@ -1,142 +1,102 @@
-.home{
-position: absolute;
-left: 9.85%;
-right: 60.6%;
-top: 3.61%;
-bottom: 91.7%;
+.sidenav {
+  /* need to specify some position other than static, so height can apply.
+     Fixed works since it will stay fixed to the side - 0 from both left and top. */
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  height: 100vh;
+  padding: 3rem;
 
-font-family: Exo;
-font-style: normal;
-font-weight: bold;
-font-size: 36px;
-line-height: 48px;
-
-/* identical to box height */
-
-color: #FFFFFF;
+  background-color: rgb(144, 118, 113, 1);
 }
-  
-.search{
+
+.spacer {
+  flex-grow: 1;
+}
+
+.sidenav > a {
+  text-decoration: none;
+}
+
+.home {
+  font-family: Exo;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 48px;
+
+  /* identical to box height */
+
+  color: #ffffff;
+}
+
+.search {
   /* Search */
-    
-  position: absolute;
-  left: 9.85%;
-  right: 55.82%;
-  top: 9.77%;
-  bottom: 85.55%;
-  
+
   font-family: Exo;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 48px;
-  
+
   /* identical to box height */
-  
-  color: #FFFFFF;
+
+  color: #ffffff;
 }
-  
-.profile{
+
+.profile {
   /* My Profile */
-  
-  position: absolute;
-  left: 9.85%;
-  right: 38.21%;
-  top: 15.92%;
-  bottom: 79.39%;
-  
+
   font-family: Exo;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 48px;
-  
+
   /* identical to box height */
-  
-  color: #FFFFFF;
+
+  color: #ffffff;
 }
-  
-.groups{
+
+.groups {
   /* My Groups */
-  
-  position: absolute;
-  left: 9.85%;
-  right: 35.82%;
-  top: 22.07%;
-  bottom: 73.24%;
-  
+
   font-family: Exo;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 48px;
-  
+
   /* identical to box height */
-  
-  color: #FFFFFF;
-} 
-  
-.connections{
+
+  color: #ffffff;
+}
+
+.connections {
   /* My Connections */
-  
-  position: absolute;
-  left: 9.85%;
-  right: 10.75%;
-  top: 28.22%;
-  bottom: 67.09%;
-  
+
   font-family: Exo;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 48px;
-  
+
   /* identical to box height */
-  
-  color: #FFFFFF;
+
+  color: #ffffff;
 }
-  
-.logouttext{
+
+.logouttext {
   /* Logout */
-  
-  position: absolute;
-  left: 61px;
-  top: 943px;
-  width: 118px;
-  height: 48px;
-  
+
   font-family: Exo;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 48px;
-  
+
   /* identical to box height */
-  
-  color: #FFFFFF;
-  z-index: 1;
-  
-}
-  
-.logoutarrow{
-  position: absolute;
-  left: 23px;
-  top: 967px;
-  width: 20px;
 
-  border: 3px solid #FFFFFF;
-  box-sizing: border-box;
+  color: #ffffff;
   z-index: 1;
-}
-  
-.logoutbackground{
-  position: absolute;
-  left: 0%;
-  top: 942px;
-  width: 200px;
-  height: 50px;
-
-  background: #E74C3C;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  z-index: 0;
 }
